Changelog
===========

3.2.4 (unreleased)
------------------

- Nothing changed yet.


3.2.3 (2014-05-14)
------------------

- Nominal support for Python 3.4.

- Fixed a bug with using the ``tabledump`` and ``tableload`` functions with
  tables containing array columns (columns in which each element is an array
  instead of a single scalar value). (spacetelescope/PyFITS#22)

- Fixed an issue where PyFITS allowed newline characters in header values and
  comments. (spacetelescope/PyFITS#51)

- Fixed pickling of ``FITS_rec`` (table data) objects.
  (spacetelescope/PyFITS#53)

- Improved behavior when writing large compressed images on OSX by removing an
  unncessary check for platform architecture. (spacetelescope/PyFITS#57)

- Allow reading FITS files from file-like objects that do not have a
  ``.closed`` attribute (and as such may not even have an "open" vs. "closed"
  concept). (spacetelescope/PyFITS#56)

- Fixed duplicate insertion of commentary keywords on compressed image
  headers. (spacetelescope/PyFITS#58)

- Fixed minor issue with comparison of header commentary card values.
  (spacetelescope/PyFITS#59)


3.1.6 (2014-05-14)
------------------

- Nominal support for Python 3.4.

- Fixed a bug with using the ``tabledump`` and ``tableload`` functions with
  tables containing array columns (columns in which each element is an array
  instead of a single scalar value). (Backported from 3.2.3)

- Fixed an issue where PyFITS allowed newline characters in header values and
  comments. (Backported from 3.2.3)

- Fixed pickling of ``FITS_rec`` (table data) objects.
  (Backported from 3.2.3)

- Improved behavior when writing large compressed images on OSX by removing an
  unncessary check for platform architecture. (Backported from 3.2.3)

- Allow reading FITS files from file-like objects that do not have a
  ``.closed`` attribute (and as such may not even have an "open" vs. "closed"
  concept). (Backported from 3.2.3)
